deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-deploy
  labels:
    app: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-app
        image: <sample-app-image>:<sample-app-tag>
        ports:
        - containerPort: 80
